# Log-Manager

./: log.py  object.py  reader.py
tag-logger/: pyproject.toml
tag-logger/log/: README.md  __main__.py
taggedLog/: pyproject.toml
taggedLog/taggedLog/: LICENSE  README.md  __init__.py  __main__.py  log.py
