[project]
name = "tag-logger"
version = "1.0.0"
description = "structured log for python"
dependencies = []
authors = [{ name="epsilonkn" }]
requires-python = ">=3.12"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
log = "log.cli:main"

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"